fix: Adjust the design to keep pages from breaking on mobile
The problem was caused by the margin of <body> element. So it solves that by reducing the margin of <body> element very small.

--- a/game.css
+++ b/game.css
@@ -1,6 +1,6 @@
 main {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 20px;
     justify-items: center;
 
