--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    margin: 30px 15% 30px 15%;
+    margin: 30px 1px 30px 1px;
     text-align: center;
     color: rgb(4, 30, 66);
 }
@@ -8,11 +8,8 @@ h1 {
     margin: 30px;
 }
 
-main {
-    margin: 60px;
-}
-
 #logo {
+    max-width: 300px;
     border: 10px solid rgb(108, 172, 228);
-    padding: 15%;
+    padding: 10%;
 }
